--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -29,3 +29,4 @@
 \newacronym{npd}{NPD}{noisy parallel decoding}
 \newacronym{bleu}{BLEU}{bilingual evaluation understudy}
 \newacronym{wngt}{WNGT}{Workshop on Neural Generation and Translation}
+\newacronym{asr}{ASR}{automatic speech recognition}
