--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,31 @@
+@inproceedings{eyben2009speech,
+  title={From speech to letters-using a novel neural network architecture for grapheme based asr},
+  author={Eyben, Florian and W{\"o}llmer, Martin and Schuller, Bj{\"o}rn and Graves, Alex},
+  booktitle={2009 IEEE Workshop on Automatic Speech Recognition \& Understanding},
+  pages={376--380},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{graves2014towards,
+  title={Towards end-to-end speech recognition with recurrent neural networks},
+  author={Graves, Alex and Jaitly, Navdeep},
+  booktitle={International conference on machine learning},
+  pages={1764--1772},
+  year={2014},
+  organization={PMLR}
+}
+
+@inproceedings{liwicki2007novel,
+  title={A novel approach to on-line handwriting recognition based on
+                  bidirectional long short-term memory networks},
+  author={Liwicki, Marcus and Graves, Alex and Fern{\`a}ndez, Santiago and
+                  Bunke, Horst and Schmidhuber, J{\"u}rgen},
+  booktitle={Proceedings of the 9th International Conference on Document
+                  Analysis and Recognition, ICDAR 2007},
+  year={2007}
+}
+
 @inproceedings{ranzato2016sequence,
   author    = {Marc'Aurelio Ranzato and
                Sumit Chopra and
