--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -282,6 +282,7 @@ I understand that my work relates to the rights and obligations
 %\include{03-context}
 %\include{04-mmt}
 \include{04-nonautoregressive}
+\include{05a-nmt-ctc}
 \include{05-experiments}
 %\include{05-architectures}
 %\include{06-analysis}
