--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,20 @@
+
+@InProceedings{glorot2010understanding,
+  title = 	 {Understanding the difficulty of training deep feedforward neural networks},
+  author = 	 {Glorot, Xavier and Bengio, Yoshua},
+  booktitle = 	 {Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics},
+  pages = 	 {249--256},
+  year = 	 {2010},
+  editor = 	 {Teh, Yee Whye and Titterington, Mike},
+  volume = 	 {9},
+  series = 	 {Proceedings of Machine Learning Research},
+  address = 	 {Chia Laguna Resort, Sardinia, Italy},
+  month = 	 {13--15 May},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v9/glorot10a/glorot10a.pdf},
+  url = 	 {https://proceedings.mlr.press/v9/glorot10a.html}
+ }
+
 @inproceedings{eyben2009speech,
   title={From speech to letters-using a novel neural network architecture for grapheme based asr},
   author={Eyben, Florian and W{\"o}llmer, Martin and Schuller, Bj{\"o}rn and Graves, Alex},
