--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -30,3 +30,4 @@
 \newacronym{bleu}{BLEU}{bilingual evaluation understudy}
 \newacronym{wngt}{WNGT}{Workshop on Neural Generation and Translation}
 \newacronym{asr}{ASR}{automatic speech recognition}
+\newacronym{sgd}{SGD}{stochastic gradient descent}
