modified keywords, work on CTC chapter

--- a/thesis/02-nmt.tex
+++ b/thesis/02-nmt.tex
@@ -925,8 +925,9 @@ parameters of the best performing model on validation.
 
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 \paragraph{Hardware.}
-
-
+\JH{fill this: for training, GPUs are usually used, sometimes TPUs. Sometimes,
+  multiple GPUs can be used, and then there is a choice between synchronous and
+  asynchronous training}
 
 
 % ------------------------------------------------------------------------------
