--- a/thesis/04-nonautoregressive.tex
+++ b/thesis/04-nonautoregressive.tex
@@ -8,14 +8,14 @@ Most commercial \gls{nmt} models are available through a cloud-based service,
 such as Microsoft Translator\footnote{\url{https://microsoft.com/translator}}
 or Google Translate\footnote{\url{https://translate.google.com}}. Scaling
 cloud-based solutions for large user bases is simple but costly. But even with
-a large pool of computational resources, it is worthwhile to implement some
+a large pool of computational resources, it is worthwhile to implement
 optimizations which decrease the model latency and improve the user experience.
 
 % lokální modely maj tu výhodu, že to běží u mně, takže to jde pouyžít offline
 % a taky se nemusím bát o svoje soukromý data. ale jsou pomalý.
 
 Locally-deployed \gls{nmt} models provide a number of advantages over
-cloud-based solutions. First, the models can be used in places without internet
+cloud-based solutions. First, the service does not rely on internet
 connection. Second, the data are not being sent to a 3rd party server, and
 therefore it is suitable for translating private or confidential data.
 However, without optimization, running state-of-the-art translation models
