--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -217,7 +217,7 @@ I understand that my work relates to the rights and obligations
 
 \begin{description}[leftmargin=7.5em,labelwidth=7em,labelindent=0em,labelsep=0.5em]
         %
-\item[Keywords:] non-autoregressive neural machine translation, neural machine translation, deep learning
+\item[Keywords:] machine translation, deep learning, natural language processing
     %
 \end{description}
 
@@ -238,7 +238,7 @@ I understand that my work relates to the rights and obligations
 
 \begin{description}[leftmargin=7.5em,labelwidth=7em,labelindent=0em,labelsep=0.5em]
 %
-\item[Klíčová slova:] neautoregresivní strojový překlad, neuronový strojový překlad, hluboké učení
+\item[Klíčová slova:] strojový překlad, hluboké učení, zpracování přirozených jazyků
 %
 \end{description}
 
